agregado imagen y meta

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="propeller" content="712a768a8f0916864f731ce948f4795f" />
     <title>Title</title>
 </head>
 <body>
-        hola mundo estas en public
+
+    <img style="display: block; width:600px; margin:40px auto;" src="img/enera_logo.png" alt="">
+
 </body>
 </html>
