cambio de título a la vista

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="propeller" content="712a768a8f0916864f731ce948f4795f" />
-    <title>Title</title>
+    <title>Enera Intelligence</title>
 </head>
 <body>
 
